Validation and filters into forms

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,18 @@ body {
   margin-bottom: 20px;
 }
 
+.form-group {
+  padding: 10px;
+}
+
+.ng-invalid.ng-dirty {
+  border-color: red;
+}
+
+.ng-valid.ng-dirty {
+  border-color:green;
+}
+
 .nav-tabs {
   margin-bottom: 10px;
 }
