Create of controller associate to a view

--- a/src/partials/pokemon-image.html
+++ b/src/partials/pokemon-image.html
@@ -1,2 +1,2 @@
-<img class="avatar center-block" ng-src="assets/img/pokemons/{{pkmCtrl.pokemon.name | lowercase}}.jpg"
-    alt="{{pkmCtrl.pokemon.name}}" />
+<img class="avatar center-block" ng-src="{{pokemon.name | imageify}}"
+    alt="{{pokemon.name}}" />
