--- a/src/partials/pokemon-name.html
+++ b/src/partials/pokemon-name.html
@@ -1,5 +1,5 @@
 <h1>
-    {{pkmCtrl.pokemon.name | uppercase}}
-    <small>{{pkmCtrl.pokemon.species}}</small>
-    <span class="label label-primary pull-right">#{{pkmCtrl.pokemon.id}}</span>
+    {{pokemon.name | uppercase}}
+    <small>{{pokemon.species}}</small>
+    <span class="label label-primary pull-right">#{{pokemon.id}}</span>
 </h1>
