--- a/src/partials/pokemon-data.html
+++ b/src/partials/pokemon-data.html
@@ -2,19 +2,19 @@
     <li class="list-group-item">
         <strong>Type:</strong>
         <span class="pull-right">
-            <span class="label type-{{type | lowercase}}" ng-repeat="type in pkmCtrl.pokemon.type">
+            <span class="label type-{{type | lowercase}}" ng-repeat="type in pokemon.type">
                 {{type}}
             </span>
         </span>
     </li>
     <li class="list-group-item">
         <strong>Height</strong>
-        <span class="pull-right">{{pkmCtrl.pokemon.height}}</span>
+        <span class="pull-right">{{pokemon.height}}</span>
     </li>
     <li class="list-group-item">
         <strong>Abilities:</strong>
         <ul>
-            <li ng-repeat="ability in pkmCtrl.pokemon.abilities">
+            <li ng-repeat="ability in pokemon.abilities">
                 {{ability}}
             </li>
         </ul>
