--- a/src/partials/pokemon-evolution.html
+++ b/src/partials/pokemon-evolution.html
@@ -1,9 +1,9 @@
-<div class="text-center" ng-repeat="pokemon in pkmCtrl.pokemon.evolutions">
-    <a href="#">
-      <img src="{{pokemon | imageify}}" alt="{{pokemon}}" width="160" />
-      <p>
-        <strong>{{pokemon}}</strong>
-      </p>
-    </a>
-    <span ng-hide="$last" class="glyphicon glyphicon-arrow-down"></span>
-  </div>
+<div class="text-center" ng-repeat="pokemon in pokemon.evolutions">
+  <a href="#">
+    <img src="{{pokemon | imageify}}" alt="{{pokemon}}" width="160" />
+    <p>
+      <strong>{{pokemon}}</strong>
+    </p>
+  </a>
+  <span ng-hide="$last" class="glyphicon glyphicon-arrow-down"></span>
+</div>
