--- a/src/views/pokedex.html
+++ b/src/views/pokedex.html
@@ -1,5 +1,9 @@
 <div>
-    <div class="page-header">
-        <h1>Pokedex</h1>
-    </div>
+  <div class="page-header">
+    <h1>Pokédex</h1>
+  </div>
+  <div ng-repeat="pokemon in pokemons">
+      <pokemon-name></pokemon-name>
+      <pokemon-image></pokemon-image>
+  </div>
 </div>
