--- a/src/views/pokedex.html
+++ b/src/views/pokedex.html
@@ -1,9 +1,14 @@
 <div>
   <div class="page-header">
-    <h1>Pokédex</h1>
+    <h1>Pokédex
+        <small class="pull-right">Showing <span class="badge">{{pokemons.length}}</span> Pokemons</small>
+    </h1>
   </div>
-  <div ng-repeat="pokemon in pokemons">
-      <pokemon-name></pokemon-name>
-      <pokemon-image></pokemon-image>
+  <div class="pokemon" ng-repeat="pokemon in pokemons">
+      <a href="#!/pokemon/{{pokemon.name | normalize}}">
+        <pokemon-name></pokemon-name>
+        <pokemon-image></pokemon-image>
+        <pokemon-type></pokemon-type>
+      </a>
   </div>
 </div>
