data storage in local storage

--- a/src/views/pokemon.html
+++ b/src/views/pokemon.html
@@ -30,6 +30,6 @@
         </div>
       </div>
     </div>
-    <pokemon-comments></pokemon-comments>
+    <pokemon-comments name={{pokemon.name}}></pokemon-comments>
   </div>
 </div>
