--- a/src/partials/pokemon-comments.html
+++ b/src/partials/pokemon-comments.html
@@ -1,26 +1,26 @@
-<button ng-hide="cmtCtrl.show" class="btn btn-primary" ng-click="cmtCtrl.toggle()"> Show comments <span
-        class="badge">{{comtCtrl.comments.length}}</span></button>
-<div ng-show="cmtCtrl.show" class="panel panal-primary">
+<button ng-hide="show" class="btn btn-primary" ng-click="toggle()"> Show comments <span
+        class="badge">{{comments.length}}</span></button>
+<div ng-show="show" class="panel panal-primary">
     <div class="panel-heading">
-        <h1 class="panel-title">Comments <button class="close pull-right" ng-click="cmtCtrl.toggle()">&times;</button>
+        <h1 class="panel-title">Comments <button class="close pull-right" ng-click="toggle()">&times;</button>
         </h1>
     </div>
     <div class="panel-body">
         <form name="commentForm" class="form-horizontal" role="form"
-            ng-submit="commentForm.$valid && cmtCtrl.addComment()" novalidate>
+            ng-submit="commentForm.$valid && addComment()" novalidate>
             <div class="form-group">
                 <div class="col-sm-6">
-                    <textarea ng-model="cmtCtrl.comment.body"
-                        placeholder="Please tell us what you think about {{pkmCtrl.pokemon.name}}" class="form-control"
+                    <textarea ng-model="comment.body"
+                        placeholder="Please tell us what you think about {{pokemon.name}}" class="form-control"
                         required></textarea>
                 </div>
                 <div class="col-sm-4">
-                    <input ng-model="cmtCtrl.comment.email" ng-disabled="cmtCtrl.comment.anonymous" type="email"
+                    <input ng-model="comment.email" ng-disabled="comment.anonymous" type="email"
                         placeholder="Please enter your email address" class="form-control"
-                        ng-required="!cmtCtrl.comment.anonymous" />
+                        ng-required="!comment.anonymous" />
                     <label>
-                        <input ng-model="cmtCtrl.comment.anonymous" id="anonymous"
-                            ng-change="cmtCtrl.anonymousChanged()" type="checkbox" />
+                        <input ng-model="comment.anonymous" id="anonymous"
+                            ng-change="anonymousChanged()" type="checkbox" />
                         Anonymous
                     </label>
                 </div>
@@ -32,7 +32,7 @@
         <div ng-if="!commentForm.$valid" class="alert alert-danger">
             Invalid Form
         </div>
-        <blockquote ng-repeat="comment in cmtCtrl.comments">
+        <blockquote ng-repeat="comment in comments">
             <p>{{comment.body}}</p>
             <footer>
                 Comment by
