--- a/src/partials/pokemon-evolution.html
+++ b/src/partials/pokemon-evolution.html
@@ -1,6 +1,6 @@
 <div class="text-center" ng-repeat="pokemon in pokemon.evolution">
-  <a href="/#!pokemon/{{pokemon.name | normalize}}">
-    <img src="{{pokemon | imageify}}" alt="{{pokemon}}" width="160" />
+  <a href="/#!pokemon/{{pokemon | normalize}}">
+    <img ng-src="{{pokemon | imageify}}" alt="{{pokemon}}" width="160" />
     <p>
       <strong>{{pokemon}}</strong>
     </p>
