Show an error if the Pokémon doesn't exist

--- a/src/views/pokemon.html
+++ b/src/views/pokemon.html
@@ -1,4 +1,7 @@
-<div>
+<div ng-if="!pokemon.name">
+  <error message="Pokémon not found"></error>
+</div>
+<div ng-if="pokemon.name">
   <div class="page-header">
     <pokemon-name></pokemon-name>
   </div>
