Order comments by date, new comments must go first

--- a/src/partials/pokemon-comments.html
+++ b/src/partials/pokemon-comments.html
@@ -32,7 +32,7 @@
         <div ng-if="!commentForm.$valid" class="alert alert-danger">
             Invalid Form
         </div>
-        <blockquote ng-repeat="comment in comments">
+        <blockquote ng-repeat="comment in comments | orderBy: '-date'">
             <p>{{comment.body}}</p>
             <footer>
                 Comment by
