Implement a search form by name

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -170,3 +170,10 @@ body {
   padding: 10px;
   border-radius: 20px 20px 0 0px;
 }
+
+.mt-2 {
+  margin-top: 1em;
+} 
+.mb-2 {
+  margin-bottom: 1em;
+}
