--- a/src/views/pokedex.html
+++ b/src/views/pokedex.html
@@ -6,8 +6,9 @@
     <h2 ng-if="type"><span class="label type-{{type | lowercase}}">{{type}}</span></h2>
   </div>
   <div class="container">
+    <pokemon-search></pokemon-search>
     <div class="row">
-      <div ng-repeat="pokemon in pokemons">
+      <div ng-repeat="pokemon in pokemons | filter:search">
         <pokemon-card></pokemon-card>
       </div>
       </div>
