--- a/src/views/pokedex.html
+++ b/src/views/pokedex.html
@@ -11,7 +11,7 @@
         <pokemon-search></pokemon-search>
       </div>
       <div class="col-2">
-        <button class="btn btn-primary btn-red">Show top 10</button>
+        <button class="btn btn-primary btn-red" onclick="location.href='#!/pokemon-top'">Show top 10</button>
       </div>
     </div>
     <div class="row">
