Use service for get pokemon

--- a/src/partials/pokemon-card.html
+++ b/src/partials/pokemon-card.html
@@ -3,9 +3,9 @@
       <a href="#!/pokemon/{{pokemon.name | normalize}}">
         <pokemon-title></pokemon-title>
         <pokemon-image></pokemon-image>
-        <div class="text-center">
+        <!-- <div class="text-center">
           <pokemon-type></pokemon-type>
-        </div>
+        </div> -->
       </a>
     </div>
   </div>
