--- a/src/partials/pokemon-image.html
+++ b/src/partials/pokemon-image.html
@@ -1,2 +1,2 @@
-<img class="avatar center-block pokemon-img" ng-src="{{pokemon.name | imageify}}"
+<img class="avatar center-block pokemon-img" ng-src="{{pokemon.image}}"
     alt="{{pokemon.name}}" />
