--- a/src/partials/pokemon-data.html
+++ b/src/partials/pokemon-data.html
@@ -10,10 +10,14 @@
         <span class="pull-right">{{pokemon.height}}</span>
     </li>
     <li class="list-group-item">
+        <strong>Weight</strong>
+        <span class="pull-right">{{pokemon.weight}}</span>
+    </li>
+    <li class="list-group-item">
         <strong>Abilities:</strong>
         <ul>
             <li ng-repeat="ability in pokemon.abilities">
-                {{ability}}
+                {{ability.ability.name}}
             </li>
         </ul>
     </li>
