--- a/src/partials/pokemon-evolution.html
+++ b/src/partials/pokemon-evolution.html
@@ -1,8 +1,8 @@
 <div class="text-center" ng-repeat="pokemon in pokemon.evolution">
-  <a href="/#!pokemon/{{pokemon | normalize}}">
-    <img ng-src="{{pokemon | imageify}}" alt="{{pokemon}}" width="160" />
+  <a href="/#!pokemon/{{pokemon.name | normalize}}">
+    <img ng-src="{{pokemon.image}}" alt="{{pokemon.name}}" width="160" />
     <p>
-      <strong>{{pokemon}}</strong>
+      <strong>{{pokemon.name}}</strong>
     </p>
   </a>
   <span ng-hide="$last" class="glyphicon glyphicon-arrow-down"></span>
