--- a/src/partials/pokemon-name.html
+++ b/src/partials/pokemon-name.html
@@ -1,6 +1,6 @@
 <h1>
     {{pokemon.name | uppercase}}
     <br />
-    <small>{{pokemon.species}}</small>
+    <!-- <small>{{pokemon.species}}</small> -->
     <span class="label label-primary pull-right">#{{pokemon.id}}</span>
 </h1>
