--- a/src/partials/pokemon-type.html
+++ b/src/partials/pokemon-type.html
@@ -1,3 +1,3 @@
-<span class="label type-{{type | lowercase}}" ng-repeat="type in pokemon.type">
-  {{type}}
+<span class="label type-{{type.type.name | lowercase}}" ng-repeat="type in pokemon.types">
+  {{type.type.name}}
 </span>
