--- a/src/partials/pokemon-name.html
+++ b/src/partials/pokemon-name.html
@@ -2,5 +2,5 @@
     {{pokemon.name | uppercase}}
     <br />
     <!-- <small>{{pokemon.species}}</small> -->
-    <span class="label label-primary pull-right">#{{pokemon.id}}</span>
+    <span class="label label-primary pull-right">#{{pokemon.number}}</span>
 </h1>
