--- a/src/partials/pokemon-rating.html
+++ b/src/partials/pokemon-rating.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <ul class="raiting-list">
+    <ul class="rating-list">
         <li>
             <div class="startInactive" ng-click="vote(1)" ng-mouseover="showStart(1)" ng-class="{startActive : starts[0]}"></div>
         </li>
@@ -16,7 +16,7 @@
             <div class="startInactive" ng-click="vote(5)" ng-mouseover="showStart(5)" ng-class="{startActive : starts[4]}"></div>
         </li>
         <li>
-            {{raitingQuantity}} raiting
+            {{ratingQuantity}} rating
         </li>
     </ul>
 </div>
