--- a/src/views/pokemon.html
+++ b/src/views/pokemon.html
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-md-6">
       <pokemon-image></pokemon-image>
-      <pokemon-raiting id="{{pokemon.id}}"></pokemon-raiting>
+      <pokemon-rating id="{{pokemon.id}}"></pokemon-rating>
     </div>
     <div class="col-md-6" ng-controller="TabsController">
       <ul class="nav nav-tabs nav-justified">
