--- a/src/views/pokemon-top.html
+++ b/src/views/pokemon-top.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-6">
           <h1 class="top-number">{{$index + 1}}</h1>
-          <h3 class="raiting">{{pokemon.raiting}}</h3>
+          <h3 class="rating">{{pokemon.rating}}</h3>
         </div>
         <div class="col-6">
           <pokemon-card></pokemon-card>
