Add comments and integration with the service

--- a/src/views/pokemon.html
+++ b/src/views/pokemon.html
@@ -34,6 +34,6 @@
         </div>
       </div>
     </div>
-    <pokemon-comments name={{pokemon.name}}></pokemon-comments>
+    <pokemon-comments id={{pokemon.id}} name={{pokemon.name}}></pokemon-comments>
   </div>
 </div>
