--- a/src/partials/pokemon-comments.html
+++ b/src/partials/pokemon-comments.html
@@ -10,12 +10,12 @@
             ng-submit="commentForm.$valid && addComment()" novalidate>
             <div class="form-group">
                 <div class="col-sm-6">
-                    <textarea ng-model="comment.body"
+                    <textarea ng-model="comment.comment"
                         placeholder="Please tell us what you think about {{pokemon.name}}" class="form-control"
                         required></textarea>
                 </div>
                 <div class="col-sm-4">
-                    <input ng-model="comment.email" ng-disabled="comment.anonymous" type="email"
+                    <input ng-model="comment.user" ng-disabled="comment.anonymous" type="email"
                         placeholder="Please enter your email address" class="form-control"
                         ng-required="!comment.anonymous" />
                     <label>
@@ -36,15 +36,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-2">
-                        <img class="rounded-circle" src="http://www.gravatar.com/avatar/{{ comment.email | gravatar }}" />
+                        <img class="rounded-circle" src="http://www.gravatar.com/avatar/{{ comment.user | gravatar }}" />
                     </div>
                     <div class="col-10">
-                        <p>{{comment.body}}</p>
+                        <p>{{comment.comment}}</p>
                     </div>
                 </div>
                 <footer>
                     Comment by
-                    <a ng-if="!comment.anonymous" href="mailto:{{comment.email}}">{{comment.email}}</a>
+                    <a ng-if="!comment.anonymous" href="mailto:{{comment.user}}">{{comment.user}}</a>
                     <em ng-if="comment.anonymous">Anonymous</em>
                     on <span>{{comment.date | date : 'medium'}}</span>
                 </footer>
